--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+//////////////////////////////////////////////////// * PROJECT 1 * //////////////////////////////////////////////////////////////
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,3 +31,5 @@
     <script src="/script.js"></script>
   </body>
 </html>
+
+//////////////////////////////////////////////////// * PROJECT 1.1 * /////////////////////////////////////////////////////////////
